Make all analysis visible (fix bug: cannot duplicate duplicate).

--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -17,7 +17,8 @@
 .analysis-container {
     bottom: 0;
     left: 0;
-    margin-bottom: 8px;
+    padding-bottom: 8px;
+    padding-left: 40px;
     overflow-x: scroll;
     overflow-y: hidden;
     padding-bottom: 8px;
@@ -25,10 +26,10 @@
     position: absolute;
     right: 0;
     top: 60px;
+    white-space: nowrap;
     /*
     -webkit-user-select: none;
     user-select: none;
-    white-space: nowrap;
      */
     background-image: url("blue_sky.jpg");
     background-size: cover;
